# drifter

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  COCKPIT.md  CONTRIBUTING.md  DEPLOYMENT_BLOCKER_REPORT.md  FIRST_DRIVE.md  LICENSE  README.md  conftest.py  deploy.ps1  docker-compose.yml  install.sh  pyproject.toml  pytest_output.txt
.omc/: .project-memory.json.tmp.01db7115-c63d-461a-8517-db28d2ff7a0b  .project-memory.json.tmp.ecdb8691-910b-416b-85d9-f35361614a90  prd.json  progress.txt  project-memory.json
android/: .gitignore  FIELD_TEST.md  README.md  settings.gradle.kts
cockpit-v4/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
config/: .env.example  80-can.rules  audit_targets.sample.yaml  ble_targets.yaml  boot-config.txt  crash.yaml  discord.yaml  driver.yaml  fleet.yaml  home.yaml  kismet_site.conf  mesh.yaml  nanomq.conf  obd.yaml  rdkx5.yaml  replay.yaml  safety.yaml  setup-can.sh  setup-zram.sh  vision.yaml  vivi.yaml  vivi_personality.txt
data/: dtc_database.json  nrl_venues.json  speed_cameras_vic.json
docs/: AIRTAG_DETECTION.md  BLE_STACK.md  COMMUNITY_TOOLS_STATUS.md  FIELD_DEPLOY.md  GPS_OPTIONS.md  MAP_CUSTOMIZATION.md  MARAUDER.md  PHASE_4_5_TO_4_8_SUMMARY.md  RF_PANELS.md  SESSION_2026-05-22.md  WIRING.md  fleet-inventory-drifter.yaml
drifter-repo/: .gitignore  AGENTS.md  Dockerfile  README.md  conftest.py  docker-compose.yml  install.sh  pyproject.toml
drifter-repo/config/: 80-can.rules  nav.yaml  setup-can.sh  spotify.yaml  vivi.yaml  vivi_personality.txt
drifter-repo/realdash/: drifter_channels.xml
drifter-repo/scripts/: install-discord.sh  install-spotify.sh  install-vision.sh  test-bench.sh
drifter-repo/services/: drifter-aidiag.service  drifter-alerts.service  drifter-alpr.service  drifter-analyst.service  drifter-anomaly.service  drifter-batcher.service  drifter-canbridge.service  drifter-dashboard.service  drifter-homesync.service  drifter-hotspot.service  drifter-llm.service  drifter-logger.service  drifter-nav.service  drifter-realdash.service  drifter-reporter.service  drifter-rf.service  drifter-safety.service  drifter-spotify.service  drifter-thresholds.service  drifter-trip.service  drifter-voice.service  drifter-wardrive.service  drifter-watchdog.service
drifter-repo/src/: adaptive_thresholds.py  ai_diagnostics.py  alert_engine.py  anomaly_monitor.py  calibrate.py  can_bridge.py  config.py  crash_detect.py  db.py  dbc_generator.py  driver_assist.py  fleet_server.py  forward_collision.py  fuzz_engine.py  home_bridge.py  home_sync.py  knowledge_base.json  llm_client.py  llm_client_v2.py  llm_mechanic.py  logger.py  mechanic.py  mesh_coordinator.py  mesh_discovery.py  nav_engine.py  obd_bridge.py  presence_detect.py  realdash_bridge.py  rf_monitor.py  safety_engine.py  satellite_manager.py  screen_dash.html  session_analyst.py  spotify_bridge.py  status.py  trip_computer.py  vehicle_id.py  vehicle_kb.py  vehicle_learn.py  vision_engine.py  (+9 more)
drifter-repo/tests/: test_alert_engine.py  test_anomaly_monitor.py  test_can_bridge.py  test_db.py  test_llm_client.py
drifter-repo/vehicles/: SAJEA51D44XD39283.yaml
realdash/: drifter_channels.xml
scripts/: deploy-pi5.sh  drifter-ble-export  drifter-ble-soak-report  fix-wifi-boot.sh  install-fleet.sh  install-mesh.sh  install-nav.sh  install-obd.sh  install-rdkx5.sh  install-safety.sh  install-vivi.sh  make-bundle.sh  migrate-corpus.py  oneshot.sh  post-deploy-check.sh  resume-claude.sh  setup-autoboot.sh  setup-can-fd.sh  setup-lcd.sh  soak-5.3.sh  start-hud.sh  test-bench-marauder.sh  test-bench.sh  test-obd.sh  test-vivi.sh
services/: 51-drifter-bluetooth.rules  drifter-aidiag.service  drifter-alerts.service  drifter-analyst.service  drifter-anomaly.service  drifter-assist.service  drifter-autoconnect.service  drifter-batcher.service  drifter-bleconv.service  drifter-boot-manager.service  drifter-boot-reason.service  drifter-can-discovery.service  drifter-canbridge.service  drifter-comms.service  drifter-crash.service  drifter-dashboard.service  drifter-dashcam.service  drifter-db-checkpoint.service  drifter-discord.service  drifter-fbmirror.service  drifter-fcw.service  drifter-feeds.service  drifter-fleet.service  drifter-flipper.service  drifter-fly-catcher.service  drifter-ghost-voice.service  drifter-ghost.service  drifter-gps.service  drifter-hid.service  drifter-home.service  drifter-homesync.service  drifter-hotspot.service  drifter-journald.conf  drifter-kb.service  drifter-kismet-bridge.service  drifter-kismet.service  drifter-lcd.service  drifter-learn.service  drifter-llm-keepwarm.service  drifter-llm-keepwarm.timer  (+32 more)
src/: _config_dtc.py  _config_topics.py  adaptive_thresholds.py  ai_diagnostics.py  aircraft_db.py  alert_engine.py  alpr_engine.py  anomaly_monitor.py  api_keys.py  auto_connect.py  ble_geocluster.py  ble_history.py  ble_identity.py  ble_map_html.py  ble_passive.py  ble_persistence.py  boot_manager.py  boot_reason.py  calibrate.py  can_bridge.py  can_decoder_ai.py  can_discovery.py  can_native.py  can_sniffer.py  comms_bridge.py  config.py  corpus.py  crash_detect.py  dashcam.py  db.py  dbc_generator.py  diagnose.py  driver_assist.py  fbmirror.c  feeds.py  field_ops_kb.py  fleet_dashboard.html  fleet_server.py  flipper_bridge.py  fly_catcher.py  (+85 more)
tests/: conftest.py  test_adaptive_thresholds.py  test_aircraft_db.py  test_alert_engine.py  test_alert_hysteresis.py  test_anomaly_monitor.py  test_auto_connect.py  test_ble_geocluster.py  test_ble_history.py  test_ble_identity.py  test_ble_passive.py  test_ble_persistence.py  test_calibrate.py  test_can_bridge.py  test_can_discovery.py  test_comms_bridge.py  test_config.py  test_corpus.py  test_dashboard_no_torch.py  test_dashboard_visibility.py  test_dashcam.py  test_db.py  test_dbc_generator.py  test_deploy_service_lists.py  test_diagnose.py  test_fleet_server.py  test_flipper_bridge.py  test_fly_catcher.py  test_ghost_protocol.py  test_gps_helper.py  test_gps_publisher.py  test_hid.py  test_home_sync.py  test_hw_probe.py  test_integration_safety_pipeline.py  (+46 more)
(+136 files in other folders)
