[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drifter"
version = "0.2.0"
description = "MZ1312 Drifter — voice-first self-hosted AI companion for vehicles"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MZ1312", email = "mazlabz.ai@gmail.com" }]
keywords = ["vtuber", "voice", "ai", "vehicle", "self-hosted", "companion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "loguru>=0.7",
    "numpy>=1.26",
    "PyYAML>=6.0",
    "paho-mqtt>=2.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2",
    "tenacity>=8.2",
    "psutil>=5.9",        # src/watchdog.py — system health metrics
    "requests>=2.31",     # src/llm_client*.py, comms_bridge, driver_assist
    "python-can>=4.0",    # src/can_bridge.py + tests/test_can_bridge.py
    "aiohttp>=3.9",       # src/feeds.py — sys.exit(1) at import if missing
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    # flipper_bridge.py imports `serial` at module load, so any test that
    # imports it (test_flipper_bridge.py) needs pyserial installed even
    # when no real Flipper hardware is attached.
    "pyserial>=3.5",
]
audio = [
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "webrtcvad>=2.0",
]
realdash = [
    "pyserial>=3.5",
    "obd>=0.7",
]

[project.urls]
Homepage = "https://github.com/thotsl4yer69/drifter"
Repository = "https://github.com/thotsl4yer69/drifter"
Issues = "https://github.com/thotsl4yer69/drifter/issues"

# The codebase is a flat collection of top-level modules under src/ (config.py,
# safety_engine.py, etc.) — there's no `drifter` package directory. Tell
# hatchling to ship the src tree as-is by rooting the wheel at src/ and
# force-including everything. The wheel imports as `import config`, etc.
[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src"]

[tool.hatch.build.targets.sdist]
only-include = ["src", "tests", "config", "services", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM", "RUF"]
# The merge from main flattened a large legacy codebase (marauder/wardrive/
# feeds) into this tree. Below are the stylistic categories that fire heavily
# on legacy code without flagging real bugs — they're suppressed as a single
# allowance for the merge PR, to be tightened in a follow-up cleanup pass.
ignore = [
    "E501",   # line too long — pre-existing convention
    "E402",   # module-level import not at top of file (legitimate lazy imports)
    "E701",   # multiple statements on one line (colon)
    "E702",   # multiple statements on one line (semicolon)
    "E741",   # ambiguous variable name (l/i/o)
    "SIM102", # collapsible nested if
    "SIM103", # return condition directly
    "SIM105", # contextlib.suppress
    "SIM108", # ternary instead of if/else
    "SIM109", # use `in` for sequence comparison
    "SIM115", # open without context manager
    "SIM117", # combine nested with
    "SIM401", # dict.get with default
    "RUF001", # ambiguous unicode in string literal (em dashes, smart quotes)
    "RUF002", # ambiguous unicode in docstring
    "RUF003", # ambiguous unicode in comment (intentional MZ1312 branding)
    "RUF005", # collection concatenation style
    "RUF043", # pytest.raises pattern
    "RUF046", # int() cast
    "RUF059", # unused unpacked variable (often `for k, _ in items()`)
    "C416",   # unnecessary comprehension
    "B007",   # loop variable not used in body
    "B023",   # function does not bind loop variable (legit warning, legacy)
    "B904",   # raise from in except clause
    "B905",   # zip without strict=
    "F841",   # unused local variable (often `result = ...` in tests for clarity)
    "RUF100", # unused noqa directive (left over from old config)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
