[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drifter"
version = "0.2.0"
description = "MZ1312 Drifter — voice-first self-hosted AI companion for vehicles"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MZ1312", email = "mazlabz.ai@gmail.com" }]
keywords = ["vtuber", "voice", "ai", "vehicle", "self-hosted", "companion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "loguru>=0.7",
    "numpy>=1.26",
    "PyYAML>=6.0",
    "paho-mqtt>=2.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
audio = [
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "webrtcvad>=2.0",
]
realdash = [
    "pyserial>=3.5",
    "obd>=0.7",
]

[project.scripts]
drifter = "drifter.cli:main"
drifter-server = "drifter.server:main"

[project.urls]
Homepage = "https://github.com/thotsl4yer69/drifter"
Repository = "https://github.com/thotsl4yer69/drifter"
Issues = "https://github.com/thotsl4yer69/drifter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/drifter"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=src/drifter --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
